<resources>
    <string name="app_name">android-steam-like</string>
    <string name="forget_password"><u>Mot de passe oublié</u></string>
    <string name="password">Mot de passe</string>
    <string name="more_info">En savoir plus</string>
    <string name="search">Rechercher un jeu…</string>
    <string name="example_game_name">Titan Fall 2 Ultimate edition</string>
    <string name="example_game_editor">EA</string>
    <string name="description">Description</string>
    <string name="opinions">Avis</string>
    <string name="forgotten_password">Mot de passe oublié</string>
    <string name="label_enter_email">Veuillez saisir votre email afin de réinitialiser votre mot de passe</string>
    <string name="email">E-mail</string>
    <string name="token">Token</string>
    <string name="template_game_name">Nom du jeu</string>
    <string name="template_game_editor">Nom de l\'éditeur</string>
    <string name="template_game_price">Prix : 10 €</string>
    <string name="label_empty_likelist">Vous n\'avez pas encore liké de contenu. Cliquez sur le coeur pour en rajouter</string>
    <string name="label_empty_wishlist">Vous n\'avez pas encore ajouté de contenu. Cliquez sur l\'étoile pour en rajouter</string>
    <string name="reset_password">Réintialiser mon mot de passe</string>
    <string name="reset">Réinitialiser</string>
    <string name="example_game_desc">Une description d\'un jeu mis en avant (peut être écris en dur)</string>
    <string name="label_signin">Veuillez saisir ces différentes informations, afin que vos listes soient sauvegardées.</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="template_view_title">View title</string>
    <string name="template_username">Utilisateur</string>
    <string name="template_comment">Contenu du commentaire</string>
    <string name="welcome">Bienvenue !</string>
    <string name="label_welcome">Veuillez vous connecter ou créer un nouveau compte pour utiliser l\'application</string>
    <string name="login">Se connecter</string>
    <string name="create_account">Créer un nouveau compte</string>
    <string name="signup">Inscription</string>
    <string name="signin">S\'inscrire</string>
    <string name="home">Accueil</string>
    <string name="wishlist">Ma liste de souhaits</string>
    <string name="likelist">Mes likes</string>
    <string name="game_detail">Détail du jeu</string>
    <string name="reload">reload</string>
</resources>