<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="#252E34"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/game_image_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="90dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/detail_button_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="90dp" />

        <ImageView
            android:id="@+id/title_card_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            />

        <ImageView
            android:id="@+id/game_image"
            style="@style/CardCoverImage"
            android:layout_width="63dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="@id/game_image_guideline"
            />

        <TextView
            android:id="@+id/game_name"
            style="@style/CardMainText"
            android:text="@string/template_game_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/game_image_guideline"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/editor_name"
            style="@style/CardDescText"
            android:text="@string/template_game_editor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/game_image_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/game_price"
            style="@style/CardDescText"
            android:text="@string/template_game_price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/game_image_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/more_info"
            style="@style/SideActionButton"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:contentDescription="@string/more_info"
            android:text="@string/more_info"
            app:layout_constraintLeft_toRightOf="@id/detail_button_guideline"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>