<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/card_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="240dp" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="297dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_card"
        android:layout_width="340dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toBottomOf="@+id/card_guide_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/grey"
        >

        <ImageView
            android:id="@+id/title_card_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            />

        <ImageView
            android:id="@+id/game_cover_image"
            style="@style/CardCoverImage"
            android:layout_width="70dp"
            android:layout_height="97dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/game_cover_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/game_name"
                style="@style/CardMainText"
                android:text="@string/example_game_name"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/game_editor"
                style="@style/CardDescText"
                android:text="@string/example_game_editor"
                android:layout_marginTop="4dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/selection_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/title_card">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/description_button"
            style="@style/NarrowActionButton"
            android:background="@drawable/button_rounded_left_full"
            android:text="@string/description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/comments_button"
            style="@style/NarrowActionButton"
            android:background="@drawable/button_rounded_right"
            android:text="@string/opinions"/>
    </LinearLayout>

    <TextView
        android:id="@+id/errors"
        style="@style/TextError"
        app:layout_constraintTop_toBottomOf="@+id/selection_button"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reload"
        style="@style/NarrowAccentActionButton"
        android:text="@string/reload"
        android:layout_width="140dp"
        android:layout_marginTop="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errors" />


    <TextView
        android:id="@+id/description"
        style="@style/LargeText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selection_button" />

    <include
        android:id="@+id/game_comments"
        layout="@layout/comments_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selection_button" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/selection_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>