<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/text_guide_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/list_guide_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="300dp" />

            <EditText
                android:id="@+id/search_bar"
                style="@style/TextInput"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/search"
                android:gravity=""
                android:imeOptions="actionDone"
                android:drawableRight="@drawable/search"
                app:layout_constraintTop_toTopOf="parent"
                />


            <ImageView
                android:id="@+id/game_image"
                style="@style/BannerImage"
                android:layout_marginTop="10dp"
                android:background="@drawable/stickies"
                app:layout_constraintTop_toBottomOf="@+id/search_bar"
                app:layout_constraintBottom_toTopOf="@+id/list_guide_line"/>


            <TextView
                android:id="@+id/game_title"
                style="@style/CardMainText"
                android:layout_marginTop="51dp"
                android:text="@string/example_game_name"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/text_guide_line"
                app:layout_constraintTop_toTopOf="@+id/game_image"
                app:layout_constraintRight_toRightOf="@+id/jacket"
                />

            <TextView
                android:id="@+id/game_desc"
                style="@style/Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/example_game_desc"
                app:layout_constraintEnd_toStartOf="@+id/jacket"
                app:layout_constraintStart_toStartOf="@+id/text_guide_line"
                app:layout_constraintTop_toBottomOf="@+id/game_title" />

            <ImageView
                android:id="@+id/jacket"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:src="@drawable/titan"
                android:layout_marginEnd="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/game_title"
                app:layout_constraintLeft_toRightOf="@+id/game_desc"
                android:contentDescription="cover image" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/know_more"
                style="@style/NarrowAccentActionButton"
                android:layout_width="140dp"
                android:text="@string/more_info"
                app:layout_constraintBottom_toBottomOf="@+id/game_image"
                app:layout_constraintStart_toStartOf="@+id/text_guide_line"
                app:layout_constraintTop_toBottomOf="@+id/game_desc" />

            <include
                android:id="@+id/game_list"
                layout="@layout/default_list"
                style="@style/GamesList"
                app:layout_constraintTop_toBottomOf="@+id/game_image"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>